# app-gateway

.init/: .linter.sh
.knowledge/: .knowledge.json  App2AppProvider_BadgerThunder_README.md.json  App2AppProvider_BadgerThunder_include_BadgerThunder_BadgerThunderPlugin.h.json  App2AppProvider_BadgerThunder_include_BadgerThunder_Module.h.json  App2AppProvider_BadgerThunder_plugin.json.json  App2AppProvider_BadgerThunder_src_BadgerThunderPlugin.cpp.json  App2AppProvider_BadgerThunder_src_Module.cpp.json  App2AppProvider_README-CI-NOTE.md.json  App2AppProvider_README.md.json  App2AppProvider_app2appprovider-technical-design.md.json  App2AppProvider_cpp_App2AppProvider.cpp.json  App2AppProvider_cpp_App2AppProvider.h.json  App2AppProvider_cpp_Interfaces_IApp2AppProvider.h.json  App2AppProvider_cpp_Module.h.json  App2AppProvider_cpp_plugin.json.json  App2AppProvider_include_App2AppProvider.h.json  App2AppProvider_include_App2AppProviderImplementation.h.json  App2AppProvider_include_AppGatewayClient.h.json  App2AppProvider_include_CorrelationStore.h.json  App2AppProvider_include_ProviderRegistry.h.json  App2AppProvider_package.json.json  App2AppProvider_rust-badger_Cargo.toml.json  App2AppProvider_rust-badger_README.md.json  App2AppProvider_rust-badger_src_lib.rs.json  App2AppProvider_rust-badger_thor_permission_registry.yaml.json  App2AppProvider_src_App2AppProvider.cpp.json  App2AppProvider_src_App2AppProviderImplementation.cpp.json  App2AppProvider_src_AppGatewayClient.cpp.json  App2AppProvider_src_CorrelationStore.cpp.json  App2AppProvider_src_ProviderRegistry.cpp.json  App2AppProvider_src_appGatewayClient.ts.json  App2AppProvider_src_correlationStore.ts.json  App2AppProvider_src_index.impl.ts.json  App2AppProvider_src_index.ts.json  App2AppProvider_src_internal.ts.json  App2AppProvider_src_providerRegistry.ts.json  App2AppProvider_src_types.ts.json  App2AppProvider_tsconfig.json.json  Badger_README.md.json  Badger_include_Badger_BadgerPlugin.h.json  (+496 more)
.knowledge/.vector_db/: milvus.db
App2AppProvider/: .eslintignore  .eslintrc.cjs  .eslintrc.json  .npmrc  CMakeLists.txt  README-CI-NOTE.md  README.md  app2appprovider-technical-design.md  package.json  tsconfig.json
App2AppProvider/BadgerThunder/: CMakeLists.txt  README.md  plugin.json
App2AppProvider/BadgerThunder/include/BadgerThunder/: BadgerThunderPlugin.h  Module.h
App2AppProvider/BadgerThunder/src/: BadgerThunderPlugin.cpp  Module.cpp
App2AppProvider/cpp/: App2AppProvider.cpp  App2AppProvider.h  CMakeLists.txt  Module.h  plugin.json
App2AppProvider/cpp/Interfaces/: IApp2AppProvider.h
App2AppProvider/include/: App2AppProvider.h  App2AppProviderImplementation.h  AppGatewayClient.h  CorrelationStore.h  ProviderRegistry.h
App2AppProvider/rust-badger/: Cargo.toml  README.md  thor_permission_registry.yaml
App2AppProvider/rust-badger/src/: lib.rs
App2AppProvider/src/: App2AppProvider.cpp  App2AppProviderImplementation.cpp  AppGatewayClient.cpp  CorrelationStore.cpp  ProviderRegistry.cpp  appGatewayClient.ts  correlationStore.ts  index.impl.ts  index.ts  internal.ts  providerRegistry.ts  types.ts
Badger/: CMakeLists.txt  README.md  plugin.json
Badger/include/Badger/: BadgerPlugin.h  Module.h  PermissionService.h  Registry.h
Badger/src/: BadgerPlugin.cpp  Module.cpp  PermissionService.cpp  Registry.cpp
dependencies/etc/WPEFramework/: config.json
dependencies/install/include/: cdmi.h
dependencies/install/include/WPEFramework/Modules/: FindConfigGenerator.cmake  FindJsonGenerator.cmake  FindProxyStubGenerator.cmake
dependencies/install/lib/: libWPEFrameworkCryptalgo.so.1.0.0  libWPEFrameworkMessaging.so.1.0.0  libWPEFrameworkWebSocket.so.1.0.0
dependencies/install/lib/cmake/WPEFramework/: WPEFrameworkConfig.cmake
dependencies/install/lib/pkgconfig/: WPEFrameworkCore.pc  WPEFrameworkDefinitions.pc  WPEFrameworkPlugins.pc  WPEFrameworkWebSocket.pc
