[package]
name = "badger-thunder-plugin"
version = "0.1.0"
edition = "2021"
authors = ["Org RDK"]
license = "Apache-2.0"
description = "Badger Thunder plugin in Rust with YAML-driven permission registry and inter-plugin communication stubs."

[lib]
name = "badger_plugin"
path = "src/lib.rs"

[[bin]]
name = "badger-thunder-plugin"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "time"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
async-trait = "0.1"
parking_lot = "0.12"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }
anyhow = "1.0"
